fix text on mobile

--- a/src/styles/Jumbo.module.css
+++ b/src/styles/Jumbo.module.css
@@ -14,5 +14,5 @@
 }
 
 #jumbo #shortAbout {
-	padding: 20px;
+	padding: 20px 0;
 }
